--- a/fonts/fontStyle.css
+++ b/fonts/fontStyle.css
@@ -1,5 +1,14 @@
 @font-face {
   font-family: "Orbitron";
+  src:
+  url("Orbitron/orbitron-light-webfont.woff") format("woff"),
+  url("Orbitron/orbitron-light-webfont.ttf") format("truetype");
+    font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Orbitron";
   src: url("Orbitron/Orbitron-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
