--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -150,9 +150,9 @@ html {
   }
   .projectList .projectListSlider .mySwiper .swiper-slide .imgSlider svg {
     position: absolute;
-    top: 0;
+    top: 5px;
     z-index: 1000;
-    left: 0;
+    left: 7px;
   }
   .projectList .projectListSlider .mySwiper .swiper-slide .imgSlider img {
     filter: brightness(0.4);
@@ -186,11 +186,14 @@ html {
     -moz-column-gap: 19px;
          column-gap: 19px;
   }
-  .projectList .projectPagination .projectNav .prevBtn, .projectList .projectPagination .projectNav .nextBtn {
-    padding: 7.25px 10.88px;
+  .projectList .projectPagination .projectNav .prevBtn a, .projectList .projectPagination .projectNav .nextBtn a {
     border: 1px solid white;
+    padding: 10.25px 10.88px 7.25px 10.88px;
   }
-  .projectList .projectPagination .swiper-pagination-fraction {
+  .projectList .projectPagination .projectNav .prevBtn a:active, .projectList .projectPagination .projectNav .nextBtn a:active {
+    background-color: gray;
+  }
+  .projectList .projectPagination .swiper-pagination-custom {
     width: -moz-fit-content !important;
     width: fit-content !important;
     position: relative;
@@ -201,14 +204,14 @@ html {
     -moz-column-gap: 4px;
          column-gap: 4px;
   }
-  .projectList .projectPagination .swiper-pagination-fraction p {
+  .projectList .projectPagination .swiper-pagination-custom p {
     font-size: 12px;
     color: rgba(255, 255, 255, 0.85);
     font-family: "Orbitron";
     font-weight: 400;
     line-height: 140%;
   }
-  .projectList .projectPagination .swiper-pagination-fraction span {
+  .projectList .projectPagination .swiper-pagination-custom span {
     width: 25px;
     background-color: rgba(255, 255, 255, 0.85);
     height: 1px;
